test-suite/tests/fail/ui/states/redundant_assign.stderr
error: state is already assigned
 --> tests/fail/ui/states/redundant_assign.rs:8:24
  |
8 |     #[stated(assign(A, A))]
  |                        ^
